[gd_scene load_steps=3 format=3 uid="uid://otf7jtld2kyb"]

[ext_resource type="LabelSettings" uid="uid://cw16x1swnwp6c" path="res://interfaces/label_settings.tres" id="1_hguhg"]
[ext_resource type="Script" path="res://scripts/element_ui.gd" id="1_pyv84"]

[node name="ElementUI" type="CanvasLayer"]
script = ExtResource("1_pyv84")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 700.0
offset_top = 401.0
offset_right = 820.0
offset_bottom = 461.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="LabelLimit" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "o"
label_settings = ExtResource("1_hguhg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SliderLimit" type="HSlider" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
min_value = 10.0
step = 10.0
value = 50.0

[connection signal="value_changed" from="Control/Panel/VBoxContainer/SliderLimit" to="." method="_on_slider_limit_value_changed"]
